# actapp

./: docker-compose.yml  pyproject.toml
src/: .env.template  main.py
src/alembic/: env.py
src/alembic/versions/: 2025_05_12_1846-9ae264b70711_add_build_object.py  2025_05_12_1941-1b601b7a8705_add_template.py  2025_05_12_2037-292643b1a1d5_add_act.py  2025_05_12_2049-622dbbe73a65_add_fields_into_template.py
src/api/: __init__.py  act.py  build_object.py  template.py
src/core/: config.py
src/core/dependencies/: db.py
src/core/enums/: template_type.py
src/core/models/: __init__.py  act.py  base.py  build_object.py  db_helper.py  template.py
src/core/models/mixins/: int_id_pk.py
src/core/schemas/: act.py  build_object.py  template.py
src/crud/: act.py  build_object.py  template.py
src/static/: style.css
src/templates/: acts_generate_page.html  base.html  index.html  object_acts_page.html  template_upload_form.html  templates_list.html
src/templates/acts/: act_create_page.html  create_act.html
src/templates/partials/: act_dynamic_form.html
src/utils/: data_expander.py  doc_generator.py  template_parser.py
src/web/view/: __init__.py  acts.py  generate.py  index.py  object_acts.py  templates.py
