[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.12"}
uvicorn = {extras = ["standard"], version = "^0.34.2"}
pydantic-settings = "^2.9.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.40"}
asyncpg = "^0.30.0"
alembic = "^1.15.2"
python-multipart = "^0.0.20"
openpyxl = "^3.1.5"
jinja2 = "^3.1.6"
loguru = "^0.7.3"
pywin32 = "^310"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

